--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -332,6 +332,13 @@ toolbox {
   }
 }
 
+@media (-moz-platform: linux) {
+*|*:root[shellshowingmenubar="true"]
+toolbar[type="menubar"]:not([customizing="true"]) {
+  display: none !important;
+}
+}
+
 toolbarspring {
   -moz-box-flex: 1000;
 }
